# normo_final

./: .gitignore  INTEGRATION_GUIDE.md  README.md  STATE_FILTERING_IMPLEMENTATION.md  docker-compose.yml
normo_backend/: Dockerfile  add_pdf_temp.py  entrypoint.sh  process_one_pdf.py  pyproject.toml
normo_backend/chroma_db_openai_v2/: pdf_metadata.json
normo_backend/conversations/: 09a7d172-5735-4311-b0f8-3ee8260d2ae6.json  0c1e33b5-8d53-4b9a-8e0d-a11358c56b10.json  0edaa985-3844-4cd8-97fa-cf2133f47f68.json  12a3846d-222b-4155-b19c-c279b630ad71.json  16c795e6-db4f-4c17-b25c-174ceb0fba5d.json  184dc500-8c86-41fa-bc50-bb3b227a7e98.json  18daebab-9866-4d6c-a01a-9b5e687f6dc0.json  1ebc034f-1809-4e1a-b17b-8e0927b95975.json  1eda9567-e3a3-47c3-ae69-2fc39f142545.json  20d5aa6a-c282-406e-88a8-93354df05796.json  2bc43ca5-1af2-48f5-9c73-82d9219cb4ea.json  2c764ed5-14e7-46be-a7cc-c56da5d2614b.json  2f727e6b-75bb-4474-9a95-4d2d698743c4.json  38a88652-db56-41c4-abb7-c9ddebd662db.json  4bee3ed0-185f-4ef7-a8e7-d27480812e64.json  4e41d901-558b-42c4-b20e-aa178336f873.json  4f5e13ef-919b-42bc-8e9d-4bec8d0092b9.json  5e4352a0-95e3-4cf3-8c69-c11243c7e19b.json  60bbad2c-c18e-4bcf-908e-1a79600bdc30.json  65083dd0-7120-454d-b0cf-9361dd9746e7.json  65884d47-d112-4019-8208-d9cf10e984ea.json  6c2d4ad3-7923-4160-87ff-ac5f4ae7f750.json  6f7f525b-43a0-45bf-84b0-264e0fd3fa01.json  776f98c5-9c44-4cd5-9123-d711ba800505.json  783158ca-1478-4a68-b005-0ff6bafb40fa.json  7b35df17-fc19-4867-ab60-77e3dbde0534.json  af486bb5-6fcb-4a26-9f0b-c476963e590d.json  b0d44900-def2-4a0b-9c73-65e05c802529.json  (+7 more)
(+29 files in other folders)
